--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "bull": "^3.18.0",
     "dotenv": "^8.2.0",
+    "jsdom": "^16.4.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.3.3"
   }
 }
