--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node -r dotenv/config index.js",
     "start:watch": "nodemon -r dotenv/config index.js",
     "scrape": "node -r dotenv/config scrape.js",
-    "consumer": "node -r dotenv/config consumer.js",
-    "producer": "node -r dotenv/config producer.js"
+    "consumer": "node -r dotenv/config lib/consumer.js",
+    "producer": "node -r dotenv/config lib/producer.js"
   },
   "jest": {
     "testEnvironment": "node"
