--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "bull": "^3.18.0",
+    "bull-board": "^0.9.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "jsdom": "^16.4.0",
     "node-fetch": "^2.6.1",
     "pg": "^8.3.3"
